@@ -1,6 +1,6 @@
 # This file is part of Coog. The COPYRIGHT file at the top level of
 # this repository contains the full copyright notices and license terms.
-from trytond.pool import PoolMeta
+from trytond.pool import PoolMeta, Pool
 from trytond.modules.coog_core import fields
 
 
@@ -26,10 +26,17 @@ class RuleEngine:
         return super(RuleEngine, self).on_change_with_result_type(name)
 
     @classmethod
-    def build_endorsement_context(cls, endorsement, action=None):
+    def build_endorsement_context(cls, endorsement_like, action=None):
+        # endorsement_like is the bearer of the endorsement information.
+        # It can be an endorsement, or an instance SelectEndorsement
+        # or an instance of a class inheriting from EndorsementWizardStepMixin
+        Endorsement = Pool().get('endorsement')
         context_ = {
-            '_endorsement_effective_date': endorsement.effective_date,
-            '_endorsement_definition': endorsement.definition,
+            '_endorsement_effective_date': endorsement_like.effective_date,
+            '_endorsement_signature_date': endorsement_like.signature_date,
+            '_endorsement_definition': endorsement_like.definition if
+            isinstance(endorsement_like, Endorsement)
+            else endorsement_like.endorsement_definition,
             '_endorsement_action': action,
             }
         return context_
@@ -39,12 +46,16 @@ class RuleEngineRuntime:
     __name__ = 'rule_engine.runtime'
 
     @classmethod
-    def _re_get_endorsement_in_progess(cls, args):
+    def _re_get_endorsement_in_progress(cls, args):
         return '_endorsement_effective_date' in args
 
     @classmethod
     def _re_get_endorsement_effective_date(cls, args):
         return args.get('_endorsement_effective_date', None)
+
+    @classmethod
+    def _re_get_endorsement_signature_date(cls, args):
+        return args.get('_endorsement_signature_date', None)
 
     @classmethod
     def _re_get_endorsement_definition(cls, args):
